--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <style>
         @font-face {
             font-family: halloweenFont;
-            src: url("./Slime and Blood.ttf");
+            src: url("./font/Slime\ and\ Blood.ttf");
         }
 
         body {
             font-family: halloweenFont, 'Times New Roman', Times, serif;
+            background-color: #2D132C;
+
         }
 
-        body {
-            background-color: #2D132C;
+        div.card-wrapper>div {
+            background-image: url("https://images.unsplash.com/photo-1635155313738-cfd999a53e56?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80");
         }
     </style>
 </head>
@@ -37,6 +39,28 @@
         <p class="text-[#C72C41] text-2xl ">Matches</p>
 
         <p class="text-[#C72C41] text-2xl col-start-3">Turns</p>
+    </div>
+    <div
+        class="card-wrapper mx-auto md:w-5/6 container lg:gap-4 grid grid-cols-4 gap-2 pb-4 px-4  mt-5 lg:px-36 xl:x-gap-1">
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
     </div>
 </body>
 
