--- a/index.html
+++ b/index.html
@@ -41,26 +41,42 @@
         <p class="text-[#C72C41] text-2xl col-start-3">Turns</p>
     </div>
     <div
-        class="card-wrapper mx-auto md:w-5/6 container lg:gap-4 grid grid-cols-4 gap-2 pb-4 px-4  mt-5 lg:px-36 xl:x-gap-1">
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        class="card-wrapper xl:translate-x-8 mx-auto md:w-5/6 container lg:gap-4 grid grid-cols-4 gap-2 pb-4 px-4  mt-5 lg:px-36 xl:x-gap-1">
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
 
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
 
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
 
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
-        <div class="bg-cover bg-center rounded-sm bg-[#801336] h-28 xl:w-44 shadow-md shadow-orange-700/30"></div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
+        <div class="bg-cover bg-center rounded-sm h-28 xl:w-44 shadow-md shadow-orange-700/30">
+        </div>
     </div>
 </body>
 
